test/src/e2e_vm_tests/test_programs/should_fail/dep_annotated/src/main.sw
contract;

dep foo;

/// This doc comment
/// should return a parser error
dep bar;

#[inline(never)]
pub dep baz;

fn a() -> bool {
    0 // Test that recovery reaches type checking.
}
